<resources>
    <string name="app_name">Rise To-Do</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="page_one_number"> </string>
    <string name="page_two_number"> </string>
    <string name="page_three_number"> </string>
    <string name="todo_empty_toast">You should add your to-do first!</string>
    <string name="app_version">Version: 1.3.1</string>
    <string name="licenses_title">Licenses</string>
    <string name="next_text">NEXT</string>
    <string name="set_due_date_hint">Set due date...</string>
    <string name="add_to_do_hint">Add your to-do here...</string>
    <string name="additional_notes_hint">Additional notes (optional)</string>
    <string name="add_to_do_button_text">ADD TO-DO</string>
    <string name="sound_title">Sound</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="opening_page_one_title">Note Down Your To-Do Regularly</string>
    <string name="opening_page_one_desc">To-Do lists tend to boost productivity and keep the mind from forgetting important tasks.</string>
    <string name="opening_page_two_title">Add Deadline</string>
    <string name="opening_page_two_desc">Setting a time frame for your tasks will help organize the day and maximize the effort.</string>
    <string name="opening_page_three_title">Check Off Your Done Tasks</string>
    <string name="opening_page_three_desc">This will give you the sense of progress and motivation to get more done.</string>
    <string name="empty_view_title">Want to add new task?</string>
    <string name="empty_view_head_title">No tasks for today</string>
    <string name="nav_view_home_title">Home</string>
    <string name="nav_view_setting_title">Setting</string>
    <string name="nav_view_about_title">About</string>
    <string name="nav_view_exit_title">Exit</string>
    <string name="option_delete_text">Delete</string>
    <string name="must_give_permission_toast">You must give permissions to record voice in order to use this feature!</string>
    <string name="file_not_found_toast">File not found!</string>
    <string name="no_reminder_specified_text">No reminder has been specified.</string>
    <string name="set_reminder_button_text">SET REMINDER</string>
    <string name="remove_reminder_button_text">REMOVE</string>
    <string name="add_reminder_title">Add reminder</string>
    <string name="reminder_expired">This reminder has been expired!</string>
    <string name="rate_us_text">Rate us on Play Store</string>


</resources>
