<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/nav_view_home_title" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/nav_view_setting_title" />

        <item
            android:id="@+id/nav_about"
            android:title="@string/nav_view_about_title"
            android:icon="@drawable/ic_info_24dp"/>
    </group>


    <item
        android:id="@+id/nav_exit"
        android:title="@string/nav_view_exit_title" />

</menu>
